fix mobile nav menu overflow

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -103,6 +103,7 @@ a {
   flex-direction: column;
   justify-content: space-around;
   margin-bottom: 36px;
+  overflow: auto;
 }
 .sidebar .nav-list ul {
   list-style: none;
